# blackhole-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  setup.sh  vcpkg.json
app/: CMakeLists.txt
app/src/: cli.cpp  main.cpp
docs/superpowers/specs/: 2026-04-16-blackhole-renderer-design.md
lib/: CMakeLists.txt
lib/include/bhr/: blackbody.hpp  camera.hpp  disk_physics.hpp  geodesic.hpp  hello.hpp  image.hpp  kerr.hpp  params.hpp  redshift.hpp  renderer.hpp  starfield.hpp
lib/src/: geodesic_rk45.cu  hello.cu  image.cpp  renderer.cu  starfield.cu
tests/: CMakeLists.txt
tests/integration/: test_golden_schwarzschild.cpp
tests/unit/: test_blackbody.cpp  test_disk_physics.cpp  test_geodesic.cpp  test_hello.cpp  test_image.cpp  test_interop.cpp  test_kerr.cpp  test_params.cpp  test_redshift.cpp  test_render.cpp
